# input-filter

./: BUILD.md  README.md
bash/: batch.sh  build.sh  docker.sh  parallel.sh  postprocess.sh  preprocess.sh
c++/: CMakeLists.txt  CMakeLists.txt.in  build.sh  conanfile.txt  inner_loop.cpp  joint_distribution.cpp  metropolis_hastings.hpp  model_distribution.cpp  model_distribution.hpp  monte_carlo_integration.hpp  multinomial.cpp  multinomial.hpp  multivariate_guassian.cpp  multivariate_guassian.hpp  sample_models.cpp  sample_models.hpp  types.hpp  utils.hpp
c++/mvi3/: mvi3.cpp  mvi3.for  mvi3.hpp
c++/tests/: boost_test.cpp  metropolis_hastings_tests.cpp  model_distribution_tests.cpp  monte_carlo_integration_tests.cpp  multinomial_tests.cpp  multivariate_guassian_tests.cpp  mvi3_tests.cpp  randomness_tests.cpp  sample_models_tests.cpp  utils_tests.cpp  vector_fill_test.cpp
data/: README  alphas.txt
data/efcamdat/: EFCAMDAT_source.txt  dets.txt  dets_no_cardinals.txt
data/efcamdat/counts/: det_cat_counts_efcamdat.csv  det_cat_counts_efcamdat_clean.csv  det_cat_counts_no_cardinals.csv  det_cat_counts_no_cardinals_common.csv  downsampled_to_100.csv  downsampled_to_1000.csv  downsampled_to_10000.csv  downsampled_to_100000.csv  downsampled_to_1000000.csv  downsampled_to_500.csv  downsampled_to_5000.csv  downsampled_to_50000.csv  downsampled_to_500000.csv  each_downsampled_to_100.csv  each_downsampled_to_200.csv  each_downsampled_to_300.csv  each_downsampled_to_400.csv  each_downsampled_to_500.csv  log_downsampled_to_100.csv  log_downsampled_to_1000.csv  log_downsampled_to_10000.csv  log_downsampled_to_100000.csv  log_downsampled_to_1000000.csv  log_downsampled_to_500.csv  log_downsampled_to_5000.csv  log_downsampled_to_50000.csv  log_downsampled_to_500000.csv
data/enron/: common_dets.txt  dets.txt
data/enron/counts/: det_cat_counts_enron.csv  det_cat_counts_enron_clean.csv  det_cat_counts_enron_clean_common.csv  downsampled_to_100.csv  downsampled_to_1000.csv  downsampled_to_10000.csv  downsampled_to_100000.csv  downsampled_to_1000000.csv  downsampled_to_500.csv  downsampled_to_5000.csv  downsampled_to_50000.csv  downsampled_to_500000.csv  log_downsampled_to_100.csv  log_downsampled_to_1000.csv  log_downsampled_to_10000.csv  log_downsampled_to_100000.csv  log_downsampled_to_1000000.csv  log_downsampled_to_500.csv  log_downsampled_to_5000.csv  log_downsampled_to_50000.csv  log_downsampled_to_500000.csv
data/test/: even_data.csv  toy_data.csv
data/wikipedia/: dets.txt
data/wikipedia/counts/: det_cat_counts_wiki.csv  det_cat_counts_wiki_clean.csv  downsampled_to_100.csv  downsampled_to_1000.csv  downsampled_to_10000.csv  downsampled_to_500.csv  downsampled_to_5000.csv  downsampled_to_50000.csv  even_to_100.csv  even_to_200.csv  even_to_300.csv  even_to_400.csv  even_to_500.csv
python/: Plots.ipynb  clean_preprocess.py  downsample.py  downsample_each.py  downsample_log.py  extract_alphas.py  extract_deltas.py  extract_epsilons.py  extract_likelyhoods.py  filter_common.py  plots.py
python/efcamdat/: preprocess_efcamdat.py
python/enron/: clean.py  preprocess_syntaxnet.py
python/wiki/: preprocess_wikipedia.py
